--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+.App {
+    display: flex;
+}
+
+.App header {
+    flex: 1;
+    border: 2px solid;
+}  
+
+.flex-child:first-child {
+    margin-right: 20px;
+}
+
+
+.App .chartPanel {
+    float: right;
+    width: 20%;
+} 
