--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -55,4 +55,19 @@
 .App .chartPanel {
     float: right;
     width: 20%;
+
+    /* ff 3.6+ */
+    background:-moz-radial-gradient(ellipse at 48% 52%, rgba(255, 252, 252, 1) 0%, rgba(255, 238, 238, 1) 100%);
+
+    /* safari 5.1+,chrome 10+ */
+    background:-webkit-radial-gradient(ellipse at 48% 52%, rgba(255, 252, 252, 1) 0%, rgba(255, 238, 238, 1) 100%);
+
+    /* opera 11.10+ */
+    background:-o-radial-gradient(ellipse at 48% 52%, rgba(255, 252, 252, 1) 0%, rgba(255, 238, 238, 1) 100%);
+
+    /* ie 10+ */
+    background:-ms-radial-gradient(ellipse at 48% 52%, rgba(255, 252, 252, 1) 0%, rgba(255, 238, 238, 1) 100%);
+
+    /* global 92%+ browsers support */
+    background:radial-gradient(ellipse at 48% 52%, rgba(255, 252, 252, 1) 0%, rgba(255, 238, 238, 1) 100%);
 } 
